# AI-Skin-Specialist

./: .gitignore  README.md  brain_of_the_doctor.py  main.py  main_gradio_backup.py  pyproject.toml  vercel.json  voice_of_the_doctor.py  voice_of_the_patient.py
api/: free_text_to_speech.py  index.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyzeButton.jsx  AudioPlayer.jsx  AudioRecorder.jsx  GlowCursor.jsx  MediaUpload.jsx  ParticlesBg.jsx  ResultsPanel.jsx
src/components/: HistorySidebar.jsx  Navbar.jsx
src/utils/: api.js
